Change DefaultHttpClient to HttpURLConnection Fix bug on post journal Fix illigal status call Cannot set request property after connection is made Remove org.apache.http.legacy