@@ -1,19 +1,7 @@
 package jp.redmine.redmineclient.task;
 
-import android.text.TextUtils;
 import android.util.Log;
 
-import org.apache.http.Header;
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpStatus;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.ResponseHandler;
-import org.apache.http.client.methods.HttpDelete;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.methods.HttpPut;
-import org.apache.http.client.methods.HttpUriRequest;
-import org.apache.http.impl.client.DefaultHttpClient;
 import org.xmlpull.v1.XmlPullParser;
 import org.xmlpull.v1.XmlPullParserException;
 import org.xmlpull.v1.XmlPullParserFactory;
@@ -22,12 +10,23 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.security.KeyManagementException;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.security.SecureRandom;
+import java.security.cert.CertificateEncodingException;
+import java.security.cert.CertificateException;
+import java.security.cert.X509Certificate;
 import java.sql.SQLException;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.InflaterInputStream;
 
+import javax.net.ssl.HttpsURLConnection;
+import javax.net.ssl.SSLContext;
+import javax.net.ssl.TrustManager;
+import javax.net.ssl.X509TrustManager;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.TransformerException;
 
@@ -43,119 +42,6 @@ public class Fetcher {
 		post,
 		delete,
 	}
-	static HttpUriRequest getHttpUriRequest(RemoteType type,
-			SelectDataTaskPutHandler puthandler, URI uri)
-			throws SQLException, TransformerException, ParserConfigurationException, IOException {
-
-		switch(type){
-			case get:
-				HttpGet get = new HttpGet(uri);
-				return get;
-			case delete:
-				HttpDelete del = new HttpDelete();
-				return del;
-			case post:
-				HttpPost post = new HttpPost(uri);
-				post.setEntity(puthandler.getContent());
-				return post;
-			case put:
-				HttpPut put = new HttpPut(uri);
-				put.setEntity(puthandler.getContent());
-				return put;
-			default:
-				break;
-		}
-		return null;
-	}
-	static boolean isGZipHttpResponse(HttpResponse response) {
-		Header header = response.getEntity().getContentEncoding();
-		if (header == null) return false;
-		String value = header.getValue();
-		return (!TextUtils.isEmpty(value) && value.contains("gzip"));
-	}
-	static boolean isDeflateHttpResponse(HttpResponse response) {
-		Header header = response.getEntity().getContentEncoding();
-		if (header == null) return false;
-		String value = header.getValue();
-		return (!TextUtils.isEmpty(value) && value.contains("deflate"));
-	}
-	static class DebugResponseHandler implements ResponseHandler<Boolean> {
-		@Override
-		public Boolean handleResponse(HttpResponse response) throws IOException {
-			int status = response.getStatusLine().getStatusCode();
-			InputStream stream = response.getEntity().getContent();
-			if (isGZipHttpResponse(response)) {
-				stream =  new GZIPInputStream(stream);
-			} else if(isDeflateHttpResponse(response)){
-				stream =  new InflaterInputStream(stream);
-			}
-			Log.d("requestDebug", "Status: " + String.valueOf(status));
-			BufferedReader reader = new BufferedReader(new InputStreamReader(stream));
-			String str;
-			Log.d("requestDebug", ">>Dump start>>>>>>>>>>>>>>>>>>>>>>>>>>>>>");
-			while((str = reader.readLine()) != null){
-				Log.d("requestDebug", str);
-			}
-			Log.d("requestDebug", "<<Dump end<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<");
-			reader.close();
-			stream.close();
-			return false;
-		}
-	}
-	static class ContentResponseHandler implements ResponseHandler<Boolean> {
-		SelectDataTaskDataHandler handler;
-		ContentResponseErrorHandler handlerError;
-		public ContentResponseHandler(SelectDataTaskDataHandler h, ContentResponseErrorHandler ev){
-			handler = h;
-			handlerError = ev;
-		}
-		@Override
-		public Boolean handleResponse(HttpResponse response) throws IOException {
-			int status = response.getStatusLine().getStatusCode();
-			long length = response.getEntity().getContentLength();
-			if(BuildConfig.DEBUG){
-				Log.i("request", "Status: " + status);
-				Log.i("request", "Protocol: " + response.getProtocolVersion());
-				Log.i("request", "Length: " + length);
-			}
-			InputStream stream = response.getEntity().getContent();
-			if (isGZipHttpResponse(response)) {
-				if(BuildConfig.DEBUG) Log.i("request", "Gzip: Enabled");
-				stream =  new GZIPInputStream(stream);
-			} else if(isDeflateHttpResponse(response)){
-				if(BuildConfig.DEBUG) Log.i("request", "Deflate: Enabled");
-				stream =  new InflaterInputStream(stream);
-			}
-			switch(status){
-				case HttpStatus.SC_OK:
-				case HttpStatus.SC_CREATED:
-					try {
-						if(length != 0)
-							handler.onContent(stream);
-						return true;
-					} catch (XmlPullParserException e) {
-						handlerError.onError(e);
-					} catch (SQLException e) {
-						handlerError.onError(e);
-					}
-					break;
-				default:
-					handlerError.onErrorRequest(status);
-					if(BuildConfig.DEBUG){
-						Log.d("requestError", "Status: " + String.valueOf(status));
-						BufferedReader reader = new BufferedReader(new InputStreamReader(stream));
-						String str;
-						while((str = reader.readLine()) != null){
-							Log.d("requestError", str);
-						}
-					}
-					break;
-			}
-			if (stream != null)
-				stream.close();
-			return false;
-		}
-	}
 	public interface ContentResponseErrorHandler {
 		void onErrorRequest(int status);
 		void onError(Exception e);
@@ -167,43 +53,151 @@ public class Fetcher {
 			,SelectDataTaskDataHandler handler
 			,SelectDataTaskPutHandler puthandler
 			,ContentResponseErrorHandler errorhandler
-	){
-		DefaultHttpClient client = connectionhandler.getHttpClient();
+	) {
+
 		Boolean isOk = false;
+		HttpURLConnection con = null;
 		try {
-			URI uri = new URI(url);
-			HttpUriRequest msg = Fetcher.getHttpUriRequest(type, puthandler, uri);
-			if (msg == null)
-				return false;
-			connectionhandler.setupOnMessage(msg);
-			msg.setHeader("Accept-Encoding", "gzip, deflate");
-			if(BuildConfig.DEBUG){
-				Log.i("request", "Url: " + msg.getURI().toASCIIString());
-				for(Header h : msg.getAllHeaders())
-					Log.d("request", "Header:" + h.toString());
-				if(type == RemoteType.get && BuildConfig.DEBUG_XML){
-					client.execute(msg, new Fetcher.DebugResponseHandler());
-				}
+			URL remoteUrl = new URL(url);
+			switch (remoteUrl.getProtocol()) {
+				case "http":
+				case "ftp":
+					con = (HttpURLConnection) remoteUrl.openConnection();
+					break;
+				case "https":
+					HttpsURLConnection cons = (HttpsURLConnection) remoteUrl.openConnection();
+
+					TrustManager[] trustManagers = new TrustManager[]{new X509TrustManager() {
+
+						private String certKey = null;
+						@Override
+						public void checkClientTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
+							if( this.certKey == null ){
+								// This is the Accept All certificates case.
+								return;
+							}
+
+							// Otherwise, we have a certKey defined. We should now examine the one we got from the server.
+							// They match? All is good. They don't, throw an exception.
+							String our_key = this.certKey.replaceAll("[^a-f0-9]+", "");
+							try {
+								//Assume self-signed root is okay?
+								X509Certificate ss_cert = x509Certificates[0];
+								String thumbprint = getThumbPrint(ss_cert);
+								Log.d("", thumbprint);
+								if( !our_key.equalsIgnoreCase(thumbprint) ){
+									throw new CertificateException("Certificate key [" + thumbprint + "] doesn't match expected value.");
+								}
+							} catch (NoSuchAlgorithmException e) {
+								throw new CertificateException("Unable to check self-signed cert, unknown algorithm. " + e.toString());
+							}
+
+						}
+
+						// Thank you: http://stackoverflow.com/questions/1270703/how-to-retrieve-compute-an-x509-certificates-thumbprint-in-java
+						private String getThumbPrint(X509Certificate cert) throws NoSuchAlgorithmException, CertificateEncodingException {
+							MessageDigest md = MessageDigest.getInstance("SHA-1");
+							byte[] der = cert.getEncoded();
+							md.update(der);
+							byte[] digest = md.digest();
+							return hexify(digest);
+						}
+
+						private String hexify (byte bytes[]) {
+							char[] hexDigits = {'0', '1', '2', '3', '4', '5', '6', '7',
+									'8', '9', 'a', 'b', 'c', 'd', 'e', 'f'};
+
+							StringBuffer buf = new StringBuffer(bytes.length * 2);
+
+							for (int i = 0; i < bytes.length; ++i) {
+								buf.append(hexDigits[(bytes[i] & 0xf0) >> 4]);
+								buf.append(hexDigits[bytes[i] & 0x0f]);
+							}
+
+							return buf.toString();
+						}
+						@Override
+						public void checkServerTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
+
+						}
+
+						@Override
+						public X509Certificate[] getAcceptedIssuers() {
+							return new X509Certificate[]{};
+						}
+					}};
+					try {
+						SSLContext context = SSLContext.getInstance("TLS");
+						context.init(null, trustManagers, new SecureRandom());
+						cons.setSSLSocketFactory(context.getSocketFactory());
+					} catch (NoSuchAlgorithmException | KeyManagementException e) {
+						errorhandler.onError(e);
+					}
+					con = cons;
+					break;
+				default:
+					return false;
 			}
-			// fetch remote
-			isOk = client.execute(msg, new Fetcher.ContentResponseHandler(handler, errorhandler));
-		} catch (URISyntaxException e) {
-			errorhandler.onErrorRequest(404);
-		} catch (ClientProtocolException e) {
+			connectionhandler.setupOnMessage(con);
+			con.setRequestProperty("Accept-Encoding", "gzip, deflate");
+			switch(type){
+				case get:
+					con.setRequestMethod("GET");
+					break;
+				case delete:
+					con.setRequestMethod("DELETE");
+					break;
+				case post:
+					con.setRequestMethod("POST");
+					con.setDoOutput(true);
+					puthandler.getContent(con);
+					break;
+				case put:
+					con.setRequestMethod("PUT");
+					con.setDoOutput(true);
+					puthandler.getContent(con);
+					break;
+				default:
+					return false;
+			}
+			con.connect();
+			int response = con.getResponseCode();
+			switch (response) {
+				case HttpURLConnection.HTTP_ACCEPTED:
+				case HttpURLConnection.HTTP_OK:
+					InputStream stream = con.getInputStream();
+					String encoding = con.getContentEncoding();
+					if(encoding == null) {
+					} else if (encoding.contains("gzip")){
+						if(BuildConfig.DEBUG) Log.i("request", "GZip: Enabled");
+						stream =  new GZIPInputStream(stream);
+					} else if (encoding.contains("deflate")){
+						if(BuildConfig.DEBUG) Log.i("request", "Deflate: Enabled");
+						stream =  new InflaterInputStream(stream);
+					}
+					handler.onContent(stream);
+					isOk = true;
+					break;
+				default:
+					errorhandler.onErrorRequest(response);
+					if(BuildConfig.DEBUG){
+						Log.d("requestError", "Status: " + String.valueOf(response));
+						BufferedReader reader = new BufferedReader(new InputStreamReader(con.getErrorStream()));
+						String str;
+						while((str = reader.readLine()) != null){
+							Log.d("requestError", str);
+						}
+					}
+					isOk = false;
+					break;
+			}
+
+		} catch (XmlPullParserException | ParserConfigurationException | TransformerException | SQLException | IOException e) {
 			errorhandler.onError(e);
-		} catch (IOException e) {
-			errorhandler.onError(e);
-		} catch (SQLException e) {
-			errorhandler.onError(e);
-		} catch (IllegalArgumentException e) {
-			errorhandler.onError(e);
-		} catch (ParserConfigurationException e) {
-			errorhandler.onError(e);
-		} catch (TransformerException e) {
-			errorhandler.onError(e);
+		} finally {
+			if(con != null)
+				con.disconnect();
 		}
-		if(!isOk)
-			connectionhandler.close();
 		return isOk;
 	}
 
